Добавлен h3 и стили к нему

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="greeting">Аллоха!</div>
+  <div class="greeting">Аллоха!
+    <h3>Ребятки!</h3>
+  </div>
 </body>
 </html>
