проверка №2, изменение разметки index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div class="greeting">Аллоха!
     <h3>Ребятки!</h3>
     <div>Здравствуйте!</div>
+    <div>Хабункан!</div>
   </div>
 </body>
 </html>
