Added simple murkup

--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="greeting">Аллоха!
-    <h3>Ребятки!</h3>
-    <div>Здравствуйте!</div>
-    <div>Хабункан!</div>
-  </div>
+  <header>
+    <h1>Всем пискам кис!</h1>
+  </header>
+  <main>
+    <div class="greeting">
+      <h3>Аллоха!</h3>
+      <p>Ребятки!</p>
+      <p>Здравствуйте!</p>
+      <p>Хабункан!</p>
+    </div>
+  </main>
+  <footer>
+    <h2>Всем кискам пис!</h2>
+  </footer>
 </body>
 </html>
