added header and bgc-header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <header>
     <h1>Всем пискам кис!</h1>
+    <h2>Всем кискам пис!</h2>
   </header>
   <main>
     <div class="greeting">
@@ -19,7 +20,7 @@
     </div>
   </main>
   <footer>
-    <h2>Всем кискам пис!</h2>
+    <h2>Все будет хорошо. Я узнавал</h2>
   </footer>
 </body>
 </html>
